# webtop-il-kit

./: .isort.cfg  .pre-commit-config.yaml  LICENSE  MANIFEST.in  PACKAGING.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  release.yml
scripts/: capture_fixtures.py
src/webtop_il_kit/: __init__.py  auth.py  browser.py  config.py  extractor.py  navigator.py  pagination.py  scraper.py  selectors.py  utils.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_full_flow.py
tests/integration/: __init__.py  conftest.py  test_auth_navigator.py  test_pagination_extractor.py  test_scraper.py
tests/recorded/: __init__.py  conftest.py  test_extraction.py  test_pagination.py
tests/recorded/fixtures/: homework_page_2026_01_22.html
tests/unit/: __init__.py  test_auth_methods.py  test_browser.py  test_config.py  test_extractor_methods.py  test_navigator_methods.py  test_pagination_methods.py  test_utils.py
