[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webtop-il-kit"
version = "0.1.0"
description = "A Python library to scrape and retrieve homework from the Webtop platform (webtop.smartschool.co.il)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Avishay Bar"}
]
keywords = ["webtop", "scraper", "homework", "education", "israel", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "playwright>=1.48.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pre-commit>=3.0.0",
    # Pre-commit hook dependencies
    "flake8>=4.0.1",
    "flake8-blind-except>=0.1.1",
    "flake8-docstrings>=1.6.0",
    "flake8-bugbear>=22.7.1",
    "flake8-comprehensions>=3.10.0",
    "flake8-implicit-str-concat>=0.3.0",
    "black>=22.6.0",
    "isort>=5.11.5",
]
all = [
    "webtop-il-kit[dev]",
]

[project.urls]
Homepage = "https://github.com/avishayil/webtop-il-kit"
Documentation = "https://github.com/avishayil/webtop-il-kit#readme"
Repository = "https://github.com/avishayil/webtop-il-kit"
Issues = "https://github.com/avishayil/webtop-il-kit/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
